Add targeted content preview for comment, vote and report.
