# src/main/resources/api/api.yaml
@@ -147,7 +147,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/PostPreview'
+              $ref: '#/components/schemas/ContentPreview'
       responses:
         200:
           description: Update successfully.
@@ -255,7 +255,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/CommentPreview'
+              $ref: '#/components/schemas/ContentPreview'
       responses:
         200:
           description: Update successfully.
@@ -306,6 +306,90 @@ paths:
         - comment
       description: Delete a comment.
       operationId: deleteCommentById
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        204:
+          description: Delete successfully.
+        400:
+          $ref: '#/components/responses/BadRequest'
+        401:
+          $ref: '#/components/responses/Unauthorized'
+        404:
+          $ref: '#/components/responses/NotFound'
+        500:
+          $ref: '#/components/responses/InternalServerError'
+
+  /api/v1/votes:
+
+    post:
+      tags:
+        - vote
+      description: Create new vote.
+      operationId: createVote
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Vote'
+      responses:
+        201:
+          description: Create successfully.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Vote'
+        400:
+          $ref: '#/components/responses/BadRequest'
+        401:
+          $ref: '#/components/responses/Unauthorized'
+        404:
+          $ref: '#/components/responses/NotFound'
+        500:
+          $ref: '#/components/responses/InternalServerError'
+
+    get:
+      tags:
+        - vote
+      description: Get all votes.
+      operationId: getVotes
+      parameters:
+        - name: targetType
+          in: query
+          required: true
+          schema:
+            type: string
+            enum:
+              - POST
+              - COMMENT
+      responses:
+        200:
+          description: Fetch successfully.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Comment'
+        400:
+          $ref: '#/components/responses/BadRequest'
+        401:
+          $ref: '#/components/responses/Unauthorized'
+        404:
+          $ref: '#/components/responses/NotFound'
+        500:
+          $ref: '#/components/responses/InternalServerError'
+
+  /api/v1/vote/{id}:
+
+    delete:
+      tags:
+        - vote
+      description: Delete a vote.
+      operationId: deleteVoteById
       parameters:
         - name: id
           in: path
@@ -408,7 +492,7 @@ components:
           type: array
           description: The list of posts created by the user.
           items:
-            $ref: '#/components/schemas/PostPreview'
+            $ref: '#/components/schemas/ContentPreview'
 
     Newsfeed:
       type: object
@@ -480,7 +564,7 @@ components:
           type: array
           description: List of comments made on a content.
           items:
-            $ref: '#/components/schemas/CommentPreview'
+            $ref: '#/components/schemas/ContentPreview'
 
     Post:
       allOf:
@@ -500,7 +584,7 @@ components:
           properties:
             target:
               type: string
-              description: The id of the targeted content.
+              description: TODO - Redesign the content models.
 
     Vote:
       type: object
@@ -522,12 +606,10 @@ components:
           type: string
           description: The time the voted was created.
           format: date-time
-        authorId:
-          type: string
-          description: Info about the vote's author
-        target:
-          type: string
-          description: The id of the targeted content.
+        author:
+          $ref: '#/components/schemas/AuthorInfo'
+        targetPreview:
+          $ref: '#/components/schemas/ContentPreview'
 
     Report:
       type: object
@@ -551,12 +633,10 @@ components:
           type: string
           description: The time the report was created.
           format: date-time
-        authorId:
-          type: string
-          description: Info about the report's author
-        target:
-          type: string
-          description: The id of the targeted content.
+        author:
+          $ref: '#/components/schemas/AuthorInfo'
+        targetPreview:
+          $ref: '#/components/schemas/ContentPreview'
 
     NewContent:
       type: object
@@ -594,7 +674,7 @@ components:
               type: string
               description: Info about the comment's target wrapped in the request.
 
-    PostPreview:
+    ContentPreview:
       type: object
       description: The preview of a Postcrunch content.
       required:
@@ -603,7 +683,10 @@ components:
       properties:
         id:
           type: string
-          description: The post's id.
+          description: The content's id.
+        contentType:
+          type: string
+          description: The type of this content.
         createdAt:
           type: string
           description: The time the content was created.
@@ -616,62 +699,27 @@ components:
           $ref: '#/components/schemas/AuthorInfo'
         edited:
           type: boolean
+        text:
+          type: string
+          description: The text in the content.
+        numUpVotes:
+          type: integer
+          description: The number of up votes made on the content.
+          format: int32
+        numDownVotes:
+          type: integer
+          description: The number of down votes made on the content.
+          format: int32
+        numComments:
+          type: integer
+          description: The number of comments made on the content.
+          format: int32
         title:
           type: string
           description: The title of the post.
-        text:
+        targetId:
           type: string
-          description: The text in the content.
-        numUpVotes:
-          type: integer
-          description: The number of up votes made on the content.
-          format: int32
-        numDownVotes:
-          type: integer
-          description: The number of down votes made on the content.
-          format: int32
-        numComments:
-          type: integer
-          description: The number of comments made on the content.
-          format: int32
-
-    CommentPreview:
-      type: object
-      description: The preview of a Postcrunch content.
-      required:
-        - id
-        - updatedAt
-      properties:
-        id:
-          type: string
-          description: The comment's id.
-        createdAt:
-          type: string
-          description: The time the content was created.
-          format: date-time
-        updatedAt:
-          type: string
-          description: The last time the content was updated.
-          format: date-time
-        author:
-          $ref: '#/components/schemas/AuthorInfo'
-        edited:
-          type: boolean
-        text:
-          type: string
-          description: The text in the content.
-        numUpVotes:
-          type: integer
-          description: The number of up votes made on the content.
-          format: int32
-        numDownVotes:
-          type: integer
-          description: The number of down votes made on the content.
-          format: int32
-        numComments:
-          type: integer
-          description: The number of comments made on the content.
-          format: int32
+          description: The id of the targeted content.
 
     ErrorResponse:
       type: object
